--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eco Harvest 2</title>
-    <link rel="stylesheet" href="./assets/css/eco.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -385,7 +385,7 @@
                 <small>Copyright 2019 <span>Crazy Innovations</span> </small>
             </div>
         </footer>
-        <script src="./assets/js/eco.js"></script>
+        <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
