--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <section class="harvest">
             <div class="harvest-contain">
                 <div class="harvest-img">
-                    <img src="http://ecoharvest.farm/Eco.png">
+                    <img src="./assets/images/fruits.png">
                 </div>
                 <div class="harvest-text">
                     <h1>Welcome To<br>
